# prod_rag_chatbot

./: .gitignore  README.md  main.py  pyproject.toml
api/: __init__.py  dependencies.py
api/middleware/: __init__.py  rate_limit.py  request_context.py
api/routes/: __init__.py  admin.py  chat.py  feedback.py  health.py  ingestion.py  metrics.py
configs/: __init__.py  default.yaml  settings.py
docs/: nexsteps.md  nextsteps.md
ingestion/: __init__.py  pipeline.py  versioning.py
ingestion/chunkers/: __init__.py  base.py  recursive_chunker.py
ingestion/embedders/: __init__.py  base.py  openai_embedder.py  sentence_transformer_embedder.py
ingestion/loaders/: __init__.py  base.py  docx_loader.py  pdf_loader.py  text_loader.py
llm/: __init__.py  generator.py  language.py
llm/clients/: __init__.py  base.py  fallback_client.py  gemini_client.py  openai_client.py
llm/templates/: __init__.py  base.py  rag_templates.py
monitoring/: __init__.py  cost_tracker.py  logging_config.py  metrics.py
retrieval/: __init__.py  cache.py  reranker.py  retriever.py  vector_store.py
schemas/: __init__.py  base.py  internal.py  requests.py  responses.py
training/: __init__.py  data_export.py
